<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".litepal.LitepalActivity">

    <TextView
        android:text="@string/baseOnSQLite"
        android:textSize="13sp"
        android:textColor="#0f0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/ll_dataInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:maxEms="14"
            android:hint="@string/etNameHint" />

        <org.angmarch.views.NiceSpinner
            android:id="@+id/sp_gender"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <EditText
            android:id="@+id/et_studentID"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:maxEms="10"
            android:inputType="number"
            android:hint="@string/etStudentIDHint" />

        <EditText
            android:id="@+id/et_age"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:maxEms="3"
            android:inputType="number"
            android:hint="@string/etAgeHint" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/ll_dataInput"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="#fff"
        android:background="#94d999"
        android:text="@string/btnSave"
        android:textSize="18sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_studentData"
        android:layout_below="@+id/btn_save"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>
