<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:src="@drawable/database"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DatabaseTest"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/img_logo"/>

    <RelativeLayout
        android:layout_centerVertical="true"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_sqlite"
            android:text="@string/btnSQLite"
            android:background="#94d999"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/btn_litepal"
            android:layout_below="@+id/btn_sqlite"
            android:textAllCaps="false"
            android:background="#94d999"
            android:textColor="#fff"
            android:textSize="20sp"
            android:text="@string/btnLitepal"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </RelativeLayout>


</RelativeLayout>
